FIX: on webkit-browsers the Select element would overflow parent if the selected option is a long string

--- a/web/src/css/styles/select-wrapper.scss
+++ b/web/src/css/styles/select-wrapper.scss
@@ -1,6 +1,10 @@
 @use "vars.scss";
 @use "base.scss";
 
+.select-wrapper-class {
+  min-width: 0px;
+}
+
 /* Control (input box) */
 .select-wrapper__control {
   display: flex;
